<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cbr currency</string>
    <string name="def_descr_img">img</string>
    <string name="def_char_currency">RUB</string>
    <string name="choose_c">Choose currency</string>
    <string name="sum">Sum</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="res">Result</string>
    <string name="update">Update</string>
    <string name="alaram">Alaram</string>
    <string name="def">0</string>
    <string name="reload">Reload</string>
	<string name="warning">Can\'t connect</string>
	<string name="title_notification">Rbc</string>
	<string name="ndata">Haven\'t connect</string>
	<color name="nominal">#00FF80</color>	
</resources>
